<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:background="@color/BackGroudColor"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Battleship"
        android:textColor="@color/white"
        android:textSize="62sp"
        android:textStyle="bold|italic"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/battleship"
        android:layout_marginBottom="30sp"/>

    <Button
        android:id="@+id/PlayBtn"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:text="@string/play"/>

    <Button
        android:id="@+id/EditBtn"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"/>

</LinearLayout>