<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseGameMode"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/BackGroudColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/war_opponent"
        android:textSize="42sp"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:layout_marginBottom="70sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/player_avatar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textColor="@color/white"
            android:textSize="32sp"/>

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/computer_avatar"/>
    </LinearLayout>

    <Button
        android:id="@+id/CoOpBtn"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/player_vs_ai"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="80sp">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/player_avatar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textColor="@color/white"
            android:textSize="32sp"/>

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/player_avatar"/>
    </LinearLayout>

    <Button
        android:id="@+id/PvpBtn"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/player_vs_player"/>
</LinearLayout>